# Recording-And-Analysis-Plugin

./: .gitignore  .gitmodules  CMakeLists.txt  Config.h.in  Doxyfile  License.txt  README.md  buildAndroid.bat
.github/workflows/: cmake.yml
AnalysisTest/: Test.cpp
Documentation/html/: _analysis_endpoints_8cpp.html  _analysis_endpoints_8cpp.js  _analysis_manager_8cpp.html  _analysis_manager_8h.html  _analysis_manager_8h.js  _analysis_manager_8h_source.html  _analysis_request_8cpp.html  _analysis_request_8h.html  _analysis_request_8h.js  _analysis_request_8h_source.html  _analysis_structs_8h.html  _analysis_structs_8h.js  _analysis_structs_8h_source.html  _and_combined_interval_analysis_request_8cpp.html  _and_combined_interval_analysis_request_8h.html  _and_combined_interval_analysis_request_8h.js  _and_combined_interval_analysis_request_8h_source.html  _buffer_8cpp.html  _buffer_8h.html  _buffer_8h.js  _buffer_8h_source.html  _config_8h.html  _config_8h.js  _config_8h_source.html  _data_type_8h.html  _data_type_8h.js  _data_type_8h_source.html  _debug_log_8cpp.html  _debug_log_8cpp.js  _debug_log_8h.html  _debug_log_8h.js  _debug_log_8h_source.html  _generic_buffer_8cpp.html  _generic_buffer_8h.html  _generic_buffer_8h.js  _generic_buffer_8h_source.html  _generic_data_8cpp.html  _generic_data_8h.html  _generic_data_8h.js  _generic_data_8h_source.html  (+375 more)
Documentation/latex/: _analysis_endpoints_8cpp.tex  _analysis_manager_8cpp.tex  _analysis_manager_8h.tex  _analysis_manager_8h_source.tex  _analysis_request_8cpp.tex  _analysis_request_8h.tex  _analysis_request_8h_source.tex  _analysis_structs_8h.tex  _analysis_structs_8h_source.tex  _and_combined_interval_analysis_request_8cpp.tex  _and_combined_interval_analysis_request_8h.tex  _and_combined_interval_analysis_request_8h_source.tex  _buffer_8cpp.tex  _buffer_8h.tex  _buffer_8h_source.tex  _config_8h.tex  _config_8h_source.tex  _data_type_8h.tex  _data_type_8h_source.tex  _debug_log_8cpp.tex  _debug_log_8h.tex  _debug_log_8h_source.tex  _generic_buffer_8cpp.tex  _generic_buffer_8h.tex  _generic_buffer_8h_source.tex  _generic_data_8cpp.tex  _generic_data_8h.tex  _generic_data_8h_source.tex  _generic_ring_buffer_8cpp.tex  _generic_ring_buffer_8h.tex  _generic_ring_buffer_8h_source.tex  _interval_analysis_request_8cpp.tex  _interval_analysis_request_8h.tex  _interval_analysis_request_8h_source.tex  (+182 more)
Src/: Config.h  DebugLog.cpp  DebugLog.h
Src/Recording/: DataType.h  (+8 more)
Test/: ExportData.cpp  Test.cpp
Unity/: IUnityGraphicsD3D11.h  IUnityGraphicsVulkan.h
Utils/: Utils.cpp  Utils.h
(+186 files in other folders)
